--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
             title.onAdd = function (map) {
                 this._div = L.DomUtil.create('div', 'title'); // create a div with a class "title"
-                this._div.innerHTML = "<h3>TOP 10 Gross inflow to Cook County, Illinois</h3>";  // Title Text
+                this._div.innerHTML = "<h3>TOP 10 Gross Inflow to Cook County, Illinois</h3>";  // Title Text
                 return this._div;
             };
 
